--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <h1>Vizitka Klára</h1>
+    <p>Knowledgebase platform owner</p>
 </body>
 </html>
