--- a/index.html
+++ b/index.html
@@ -6,9 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt 01 - vizitka</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Vizitka Klára</h1>
-    <p>Knowledgebase platform owner</p>
+
+<header>
+    <h1>Vizitka - Klára Hnátová</h1>
+</header>   
+
+<img class="ja" src="/Projekt-01-vizitka/Obrazek-WhatsApp-2024-02-26.jpg" alt="Klára" width="300px" height="400px">
+
+<nav class="topnav">
+    <a href="#omne">O mně</a>
+    <a href="#moje-zaliby">Moje záliby</a>
+    <a href="#muj-pes">Můj pes</a>
+</nav>
+
+<section id="omne">
+    <h2>O mně</h2>
+    <p>Pracuji jako administrátor firemního dokumentačního portálu. Na této pozici pracuji už rok a čtvrt. Předtím jsem pracovala na pozicích marketingového a projektového zaměření.<br>
+    Kvůli své práci se často ocitám v situacích, kdy o sobě musím říct jednu zajímavost. Většinou mluvím o svých vtipných alergiích - mám alergii na kočičí bobky!</p>
+</section>
+
+<section id="moje-zaliby">
+    <h2>Moje záliby</h2>
+    <p>Mezi mé záliby patří příroda, psychologie, fotografování, umění, cestování, čtení a prakticky jakákoli kreativní činnost. Ráda se učím a dozvídám nové věci.<br>
+    Procházím se nejraději v lese mimo turistické značení, abych měla jistotu, že budu mít na procházce klid a ticho.<br>
+    Sbírám tropické pokojové rostliny, mám jich už přibližně 100 druhů. Znamená to, že v každém novém městě, které navštívím, nutně potřebuji navštívit místní skleník. </p>
+    <section class="galerie">
+    <img class="dovolena" src="/Projekt-01-vizitka/dovolena.jpg" alt="dovolena">
+    <img class="sklenik" src="/Projekt-01-vizitka/sklenik.jpg" alt="sklenik">
+    </section>
+</section>
+
+<section id="muj-pes">
+    <h2>Můj pes</h2>
+    <p>Před pěti lety jsem ze záchrané stanice adoptovala štěňátko křížence německého a australského ovčáka jménem Nala.<br>
+        Většinu svého času tedy věnuji procházkám, tréninku a aktivitám této psí princezny.</p>
+    <section class="galerie">
+        <img class="doggo1" src="/Projekt-01-vizitka/Nala1.jpg" alt="Nala1">
+    <img class="doggo2" src="/Projekt-01-vizitka/Nala2.jpg" alt="Nala2">
+    </section>
+</section>
+<footer id="#kontakt">
+    <h2>Kontakt</h2>
+    <p class="udaje">E-mail: <a href="mailto:klara.kh@seznam.cz">klara.kh@seznam.cz</a> <br>
+        Instagram: <a href="https://rb.gy/pkkduq">Můj profil</a></p>
+        <p>© Klára Hnátová, 2024</p>
+</footer>
 </body>
 </html>
